--- a/src/components/home/components/View-Memberships/components/membershipRightDrawer.scss
+++ b/src/components/home/components/View-Memberships/components/membershipRightDrawer.scss
@@ -708,9 +708,9 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    margin-top: 60px;
+                    //margin-top: 60px;
                     width: 100%;
-                    height: 260px;
+                    height: 200px;
 
                     left: 15px;
                     position: relative;
@@ -1303,9 +1303,9 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    margin-top: 60px;
+                    //margin-top: 60px;
                     width: 100%;
-                    height: 260px;
+                    height: 200px;
                     position: relative;
 
 
